tests/NormalTests/paczka1/small_fuzzy/19575836.err
Error in line 4: IpkwxcR6 A100 13,4
Error in line 7: IpkwxcR6 A30 35,2
